--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <base target="_blank">
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-  <title>AR TRY ON APP</title>
+  <title>AURA Facefilter Dev</title>
 
   <style>
     #xzimg-sdk-wrapper {
@@ -26,17 +26,23 @@
 
     #xzimg-sdk-canvas {
       position: relative;
+      width:100%;
+      height:100%;
+      min-width:100vh;
+      min-height:100vh;
       left: 0;
       top: 0;
     }
 
     #xzimg-sdk-logo {
+      display:none;
       position: absolute;
       left: 0;
       top: 0;
     }
 
     #progress-bar[value] {
+      display:none;
       width: 400px;
       height: 15px;
       -webkit-appearance: none;
@@ -62,8 +68,6 @@
 
 <body>
   <div class="container">
-    <h2 class="text-center">Threejs AR App</h2>
-
     <div class="videosource">
       <label for="video-source">Select Video source: </label>
       <select id="video-source">
