--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
   <style>
     #xzimg-sdk-wrapper {
       position: relative;
-      margin-left: 10px;
-      margin-top: 50px;
+      margin-left: 0px;
+      margin-top: 0px;
+      width:100%;
+      height:100%;
+      min-width:100vh;
+      min-height:100vh;
     }
 
     #xzimg-sdk-video {
