--- a/index.html
+++ b/index.html
@@ -83,32 +83,28 @@
       <video id="xzimg-sdk-video" playsinline autoplay></video>
       <canvas id="xzimg-sdk-canvas"></canvas>
     </div>
-    <label for="progress-bar">Init. progress: </label>
     <progress id="progress-bar" max="100" value="0"></progress>
     <div class="row">
       <div class="col-sm-6">
         <h3>lipstick controls</h3>
         <div class="slidecontainer">
-          <label for="myRange">lipstick Darkness</label>
+          <label for="myRange">Darkness</label>
           <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
 
-          <p>lipstick colors</p>
+          <p>Colors</p>
           <button class="btn red-button" id="red-button"></button>
           <button class="btn green-button" id="green-button"></button>
         </div>
 
       </div>
       <div class="col-sm-6">
-        <h3>Eybrows / mascara controls</h3>
+        <h3>Eyebrows / mascara controls</h3>
         <div class="slidecontainer">
-          <label for="myRange">eyebrows / mascara Darkness</label>
+          <label for="myRange">Darkness</label>
           <input type="range" min="1" max="100" value="50" class="slider" id="myMascara">
         </div>
 
       </div>
-
-
-
     </div>
     <script src="three.min.js"></script>
 
