--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
   <title>AURA Facefilter Dev</title>
 
   <style>
+    .container {
+      width:100%;
+      height:100%;
+      min-width:100vh;
+      min-height:100vh;
+    }
+    
     #xzimg-sdk-wrapper {
       position: relative;
       margin-left: 0px;
