--- a/index.html
+++ b/index.html
@@ -13,10 +13,16 @@
 
   <style>
     .container {
-      width:100%;
-      height:100%;
-      min-width:100vh;
-      min-height:100vh;
+      width:100%!important;
+      height:100%!important;
+      max-width:100%!important;
+      max-height:100%!important;
+      min-width:100vh!important;
+      min-height:100vh!important;
+      padding-right: 0px!important;
+    padding-left: 0px!important;
+    margin-right: auto!important;
+    margin-left: auto!important;
     }
     
     #xzimg-sdk-wrapper {
