--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       height:100%!important;
       max-width:100%!important;
       max-height:100%!important;
-      min-width:100vh!important;
+      min-width:100vw!important;
       min-height:100vh!important;
       padding-right: 0px!important;
     padding-left: 0px!important;
@@ -31,7 +31,7 @@
       margin-top: 0px;
       width:100%;
       height:100%;
-      min-width:100vh;
+      min-width:100vw;
       min-height:100vh;
     }
 
